package edu.metrostate.trackingsystem.infrastructure.database;

import edu.metrostate.trackingsystem.application.dto.ImportDTO;
import edu.metrostate.trackingsystem.domain.models.Dealer;
import edu.metrostate.trackingsystem.domain.models.Vehicle;
import javafx.collections.FXCollections;

import java.util.List;
import java.util.stream.Collectors;

/**
 *   We are not really connected to a database.
 *   This singleton will have a list of dealers which is serve as our
 *   in-memory database
 */
public class DatabaseContext implements IDatabaseContext {
    private static IDatabaseContext instance = null;
    private final List<Dealer> dealers;

    private DatabaseContext() {
        dealers = FXCollections.observableArrayList();
    }

    public static IDatabaseContext getInstance() {
        if (instance == null) {
            instance = new DatabaseContext();
        }
        return instance;
    }

    @Override
    public List<Dealer> getDealers() {
        return dealers;
    }
    /**
     * @return All registered dealership IDs.
     */
    @Override
    public List<String> getDealershipIDs() {
        return dealers
            .stream()
            .map(Dealer::getDealershipId)
            .collect(Collectors.toList());
    }

    /**
     * flatMap comes pretty handy here as we've got a List of dealers and
     * each dealer has a list of vehicles.
     * @return All vehicles for all Dealers.
     */
    @Override
    public List<Vehicle> getVehicles() {
        return dealers
            .stream()
            .flatMap(dealer -> dealer.getVehicles().stream())
            .collect(Collectors.toList());
    }

    /**
     * Gets a dealer by ID
     * @param dealershipId the dealer ID
     * @return the dealer for dealershipId or an error message
     */
    @Override
    public Result<Dealer> getDealerByID(String dealershipId) {
        var dealer = dealers
            .stream()
            .filter(d -> d.getDealershipId().equals(dealershipId))
            .findFirst()
            .orElse(null);

        if (dealer != null) {
            return Result.success(dealer);
        }
        return Result.failure("Dealership ID not found...");
    }

    @Override
    public void toggleAcquisition(String dealershipId) {
        var dealer = getDealerByID(dealershipId);
        if (dealer.isSuccess()) {
            dealer.getData().setEnabledForAcquisition(!dealer.getData().getEnabledForAcquisition());
        }
    }

    @Override
    public Result<Boolean> addVehicle(Vehicle vehicle) {
        Dealer dealer;

        var getDealerResult = getDealerByID(vehicle.getDealershipId());
        if (getDealerResult.isSuccess()) {
            dealer = getDealerResult.getData();
        } else {
            return Result.failure(getDealerResult.getErrorMessage());
        }

        if (!dealer.getEnabledForAcquisition()) {
            return Result.failure("Dealer is not enabled for acquisition.");
        }

        var vehicles = dealer.getVehicles();
        var existingVehicleWithSameId = vehicles
            .stream()
            .filter(v -> v.getVehicleId().equals(vehicle.getVehicleId()))
            .findFirst()
            .orElse(null);

        // ID is being used already.
        if (existingVehicleWithSameId != null) {
            return Result.failure("Vehicle ID already exists...");
        }

        vehicles.add(vehicle);
        return Result.success();
    }

    @Override
    public Result<Boolean> deleteVehicle(Vehicle vehicle) {
        var result = getDealerByID(vehicle.getDealershipId());
        if (result.isSuccess()) {
            result.getData()
                  .getVehicles()
                  .removeIf(v -> v.getVehicleId().equals(vehicle.getVehicleId()));
            return Result.success();
        }
        return Result.failure(result.getErrorMessage());
    }

    @Override
    public Vehicle getVehicle(String id, String dealerId) {
        var dealer =  dealers
            .stream()
            .filter(d -> d.getDealershipId().equals(dealerId))
            .findFirst()
            .orElse(null);

        if (dealer == null) {
            return null;
        }

        return dealer
            .getVehicles()
            .stream()
            .filter(v -> v.getVehicleId().equals((id)))
            .findFirst()
            .orElse(null);
    }

    @Override
    public void loadDatabase(List<ImportDTO> data) {
        for (var item : data) {
            var dealer = dealers
                .stream()
                .filter(d -> d.getDealershipId().equals(item.getDealershipId()))
                .findFirst()
                .orElse(null);

            // create a dealer if one with the same ID does not exist.
            if (dealer == null) {
                dealer = new Dealer(item.getDealershipId());
                dealers.add((dealer));
            }

            // if vehicle ID is in use, update its information, add a new one otherwise.
            var vehicle = getVehicle(item.getVehicleId(), item.getDealershipId());
            if (vehicle == null) {
                vehicle = new Vehicle(
                        item.getVehicleId(),
                        item.getVehicleManufacturer(),
                        item.getVehicleModel(),
                        item.getAcquisitionDate(),
                        item.getPrice(),
                        item.getDealershipId(),
                        item.getVehicleType()
                );
                dealer.addVehicle(vehicle);
            } else {
                vehicle.setManufacturer(item.getVehicleManufacturer());
                vehicle.setModel(item.getVehicleModel());
                vehicle.setType(item.getVehicleType());
                vehicle.setPrice(item.getPrice());
                vehicle.setAcquisitionDate(item.getAcquisitionDate());
            }
        }
    }
}
